--- a/package.json
+++ b/package.json
@@ -25,6 +25,16 @@
   },
   "devDependencies": {
     "@types/html-escaper": "^3.0.0",
-    "html-escaper": "^3.0.3"
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "eslint": "^8.40.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-astro": "^0.26.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "html-escaper": "^3.0.3",
+    "typescript": "^5.0.4"
   }
 }
