feat: add roboto flex font

--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "upgrade": "pnpm dlx @astrojs/upgrade"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.2",
     "@astrojs/starlight": "^0.26.1",
+    "@fontsource-variable/roboto-flex": "^5.0.16",
     "astro": "^4.10.2",
     "sharp": "^0.32.5",
-    "@astrojs/check": "^0.9.2",
     "typescript": "^5.5.4"
   }
 }
