--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "astro": "^4.10.2",
     "sharp": "^0.32.5",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
