--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "@fontsource-variable/roboto-flex": "^5.0.16",
     "astro": "^4.10.2",
     "sharp": "^0.32.5",
-    "typescript": "^5.5.4"
-  },
-  "devDependencies": {
+    "typescript": "^5.5.4",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1"
   }
