--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@astrojs/check": "^0.9.2",
     "@astrojs/starlight": "^0.26.1",
     "@fontsource-variable/roboto-flex": "^5.0.16",
-    "astro": "^4.10.2",
-    "sharp": "^0.32.5",
-    "typescript": "^5.5.4",
+    "astro": "^4.14.2",
     "prettier": "^3.3.3",
-    "prettier-plugin-astro": "^0.14.1"
+    "prettier-plugin-astro": "^0.14.1",
+    "sharp": "^0.32.5",
+    "typescript": "^5.5.4"
   }
 }
